2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added mime entry for D source files, fixes
	#676

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added audio/wav and audio/vnd.wave aliases
	for wav files, fixes #1885

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: text/xml+html is a subclass of text/xml, not
	text/plain

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: use application/msword as the main type
	for MS/Word files

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: fix entry about DICOM, fixes bug #1310,
	patch from Artur Frysiak <wiget@pld-linux.org>

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added audio/x-m4a, fixes #584

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: move a few definitions to get an
	alphabetically ordered file.

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: change application/x-python to
	text/x-python, fixes #208, please complain if you think this is wrong.

2004-12-09  Christophe Fergeau  <teuf@gnome.org>

	* po/Makefile.in.in: sync with upstream changes

2004-12-09  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: back out DTD change which wasn't expected in
	the first place.

2004-12-08  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: added application/x-zip-compressed as an 
	alias to application/zip.

2004-12-08  Christophe Fergeau  <teuf@gnome.org>

	* Makefile.am: don't override CFLAGS, fixes #2033

2004-12-08  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: change main mp3 mime type to audio/mpeg,
	add audio/x-mp3 as an alias for this mime type.

2004-12-02  Dan Winship  <danw@novell.com>

	* Makefile.am (CLEANFILES, DISTCLEANFILES): Fix. intltool stuff